--- a/other-scripts/index.html
+++ b/other-scripts/index.html
@@ -10,12 +10,14 @@
     <h1>Real-time Transcription</h1>
     <button id="startButton">Start Recording</button>
     <button id="stopButton" disabled>Stop Recording</button>
+    <button id="interruptButton" disabled>Interrupt</button>
     <div id="transcript"></div>
 
     <script>
       const socket = io();
       const startButton = document.getElementById("startButton");
       const stopButton = document.getElementById("stopButton");
+      const interruptButton = document.getElementById("interruptButton");
       const transcriptDiv = document.getElementById("transcript");
       let mediaRecorder;
       let audioChunks = [];
@@ -26,13 +28,11 @@
 
       startButton.addEventListener("click", startRecording);
       stopButton.addEventListener("click", stopRecording);
+      interruptButton.addEventListener("click", stopCurrentAudio);
 
       socket.on("stream_interrupted", () => {
         console.log("stream_interrupted");
-        if (sourceNode) {
-          console.log("sourceNode.stop()");
-          sourceNode.stop();
-        }
+        stopCurrentAudio();
       });
 
       socket.on("audio", (arrayBuffer) => {
@@ -41,11 +41,11 @@
         if (!isPlaying) {
           playNextInQueue();
         }
+        interruptButton.disabled = false;
       });
 
       function startRecording() {
-        // Uncomment and modify if needed
-        // socket.emit('message', "Explain me what is nodejs");
+        stopCurrentAudio();
 
         navigator.mediaDevices
           .getUserMedia({ audio: true })
@@ -58,6 +58,7 @@
             mediaRecorder.start(250);
             startButton.disabled = true;
             stopButton.disabled = false;
+            interruptButton.disabled = true;
           })
           .catch((error) =>
             console.error("Error accessing microphone:", error)
@@ -65,19 +66,34 @@
       }
 
       function stopRecording() {
-        mediaRecorder.stop();
-        startButton.disabled = false;
-        stopButton.disabled = true;
-        socket.disconnect();
+        if (mediaRecorder && mediaRecorder.state !== "inactive") {
+          mediaRecorder.stop();
+          startButton.disabled = false;
+          stopButton.disabled = true;
+        }
+      }
+
+      function stopCurrentAudio() {
+        if (sourceNode) {
+          sourceNode.stop();
+          sourceNode.disconnect();
+          sourceNode = null;
+        }
+        audioQueue = [];
+        isPlaying = false;
+        interruptButton.disabled = true;
       }
 
       async function playNextInQueue() {
         if (audioQueue.length === 0) {
           isPlaying = false;
+          interruptButton.disabled = true;
           return;
         }
 
         isPlaying = true;
+        interruptButton.disabled = false;
+
         const arrayBuffer = audioQueue.shift();
 
         if (!audioContext) {
@@ -90,13 +106,24 @@
           sourceNode = audioContext.createBufferSource();
           sourceNode.buffer = audioBuffer;
           sourceNode.connect(audioContext.destination);
-          sourceNode.onended = playNextInQueue; // Play next when current audio ends
+          sourceNode.onended = playNextInQueue;
           sourceNode.start();
         } catch (error) {
           console.error("Error decoding audio data:", error);
-          playNextInQueue(); // Move to next audio in case of error
+          playNextInQueue();
         }
       }
+
+      // Ensure audio context is resumed on user interaction
+      document.body.addEventListener(
+        "click",
+        () => {
+          if (audioContext && audioContext.state === "suspended") {
+            audioContext.resume();
+          }
+        },
+        { once: true }
+      );
     </script>
   </body>
 </html>
